# gazebo_sim

./: .gitignore
ros_gz_example_application/: CMakeLists.txt  package.xml  setup.py
ros_gz_example_application/launch/: spread_fire.launch.py
ros_gz_example_application/scripts/: ball_spawner.py  fireCellGoal.py  fire_weather_index.py  fourseasons.py  gazebo_service_tester.py  go_to_goal.py  greenIntensity.py  handleFire.py  initForest.py  movingPoseClient.py  realToSimPose.py  setEntityService.py  spawner.py  spreadFire.py
ros_gz_example_application/src/: ball_spawner.py  filter_odom.py  path_publisher.py
ros_gz_example_bringup/config/: diff_drive.rviz
ros_gz_example_bringup/launch/: diff_drive.launch.py
ros_gz_example_description/models/ball/: model.sdf
ros_gz_example_description/models/diff_drive/: model.sdf
ros_gz_example_description/models/forest_1_ball/forest_1_ball_state_0/: model.config  model.sdf
ros_gz_example_description/models/forest_1_ball/forest_1_ball_state_1/: model.config  model.sdf
ros_gz_example_description/models/forest_1_ball/forest_1_ball_state_2/: model.config  model.sdf
ros_gz_example_description/models/forest_1_ball/forest_1_ball_state_3/: model.config  model.sdf
ros_gz_example_description/models/forest_1_ball/forest_1_ball_state_4/: model.config  model.sdf
ros_gz_example_description/models/forest_1_ball/forest_1_ball_state_5/: model.config  model.sdf
ros_gz_example_description/models/forest_1_ball/forest_1_ball_state_6/: model.config  model.sdf
ros_gz_example_description/models/forest_1_ball/forest_1_ball_state_7/: model.config  model.sdf
ros_gz_example_description/models/my_ground_plane/: model.config  model.sdf
ros_gz_example_gazebo/worlds/: diff_drive.sdf
(+128 files in other folders)
